<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333030">

    <TextView
        android:id="@+id/textView"
        android:layout_width="186dp"
        android:layout_height="34dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/text1"
        android:textColor="@color/teal_200"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <EditText
        android:id="@+id/t_name"
        android:layout_width="326dp"
        android:layout_height="44dp"
        android:hint="@string/Nombre"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.364"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />
    <EditText
        android:id="@+id/t_fecha"
        android:layout_width="325dp"
        android:layout_height="45dp"
        android:layout_below="@+id/t_name"
        android:layout_marginTop="48dp"
        android:hint="@string/Fecha"
        android:inputType="text|date"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_name" />
    <EditText
        android:id="@+id/t_direccion"
        android:layout_width="325dp"
        android:layout_height="45dp"
        android:layout_below="@+id/t_name"
        android:layout_marginTop="4dp"
        android:hint="@string/Dirreccion"
        android:inputType="textPostalAddress"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_name" />

    <EditText
        android:id="@+id/t_numero"
        android:layout_width="325dp"
        android:layout_height="45dp"
        android:layout_below="@+id/t_fecha"
        android:layout_marginTop="4dp"
        android:hint="@string/num"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_fecha" />

    <Switch
        android:id="@+id/sw_activecustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t_numero"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/Activo"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_numero"
        app:layout_constraintVertical_bias="0.009" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_fecha" />

</androidx.constraintlayout.widget.ConstraintLayout>